Integrate portals with Spring backend